--- a/src/components/Modal/index.module.css
+++ b/src/components/Modal/index.module.css
@@ -1,4 +1,4 @@
-.root {
+.contentWrapper {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -6,6 +6,7 @@
     transform: translate(-50%, -50%);
     max-width: 720px;
     width: 100%;
+    z-index: 100;
 }
 
 .content {
