--- a/src/components/burger-constructor/index.module.css
+++ b/src/components/burger-constructor/index.module.css
@@ -1,7 +1,13 @@
-.root {
+.content {
     display: flex;
     flex-direction: column;
     gap: 16px;
+    border: 2px solid transparent;
+    border-radius: 20px;
+}
+
+.contentHover {
+    border-color: var(--colors-interface-accent);
 }
 
 .main {
@@ -14,12 +20,12 @@
 .main::-webkit-scrollbar {
     width: 8px;
 }
- 
+
 .main::-webkit-scrollbar-track {
     background-color: var(--background-element);
     height: 50%;
 }
- 
+
 .main::-webkit-scrollbar-thumb {
     background-color: var(--text-inactive-color);
     height: 50%;
