--- a/src/components/burger-constructor/index.module.css
+++ b/src/components/burger-constructor/index.module.css
@@ -48,6 +48,10 @@
     height: 33px;
 }
 
+.bun {
+    margin-left: 44px;
+}
+
 @media screen and (max-width: 450px) {
     .bottom {
         flex-direction: column;
